--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>王小欢生日快乐哦！</title>
     <link rel="icon" href="./images/favicon.ico">
     <link href="./css/style.css" type="text/css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+
     <!--<meta itemprop="image" content="./images/fenxiang.png" />-->
     <style>
         html {
@@ -80,7 +80,7 @@
 </head>
 
 <body>
-<!--&lt;!&ndash;更改为你女朋友的头像&ndash;&gt;-->
+
 <div class="cs">
     <img src="./images/174.jpg" id="logo">
 </div>
@@ -117,7 +117,7 @@
             //document.body.classList.add('body--ready');
             //想说的话
             //S.UI.simulate("亲爱的|生日快乐哟|#countdown 5|#rectangle 15x15|#circle 12 |#time");
-            S.UI.simulate("王小欢|生日快乐哟|#circle 12 |#time|#countdown 3");
+            S.UI.simulate("王小欢|生日快乐|#circle 12 |#time|#countdown 3");
             S.Drawing.loop(function () {
                 S.Shape.render();
             });
